--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <groupId>org.zeromq</groupId>
     <artifactId>jzmq</artifactId>
-    <version>3.0.1</version>
+    <version>3.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>jzmq</name>
     <description>
@@ -26,7 +26,7 @@
         <connection>scm:git:git://github.com/zeromq/jzmq.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/zeromq/jzmq.git</developerConnection>
         <url>git://github.com/zeromq/jzmq.git</url>
-        <tag>v3.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
     <licenses>
         <license>
